<resources>
    <string name="adicione_cerveja">Adicione Uma Cerveja!</string>

    <!-- Hints -->
    <string name="text_hint_marca">Marca</string>
    <string name="text_hint_valor">Valor</string>
    <string name="text_hint_medida">Medida</string>

    <!-- Ações -->
    <string name="adiciona">Adicione uma Cerveja!</string>
    <string name="editar">Edite uma Cerveja!</string>
    <string name="atualizar">Atualizar Cerveja</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>

    <!-- Toasts -->
    <string name="toastMarca">A Marca Não Pode Ser Vazia.</string>
    <string name="toastError">Erro ao Carregar a Ação</string>

    <!-- Ações Toque Longo -->
    <string name="excluir">Excluir Cerveja</string>
    <string name="excluirTudo">Excluir todas as cervejas</string>
    <string name="tituloOpcao">Escolha uma Opção</string>
    <string name="app_name">Calculadora de Cerveja</string>

    <!-- Acessibilidade -->
    <string name="marcaEmConta">Cerveja mais barata</string>
    <string name="precoEmConta">Preco mais barato</string>
    <string name="tamanhoEmConta">Tamanho mais barato</string>
    <string name="diferencaLitro">Valor para chegar a um litro</string>
    <string name="adicioneCervejaDescription">Adicione uma cerveja</string>
    <string name="marcaDaCerveja">Digite a marca da cerveja</string>
    <string name="valorDaCerveja">Digite o valor da cerveja</string>
    <string name="tamanhoDaCerveja">Digite o tamanho da cerveja</string>
</resources>
