<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppbarOverley">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:popupTheme="@style/AppTheme.AppbarOverley" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
            android:padding="@dimen/paddingCampos">

            <TextView
                android:id="@+id/marcaEmConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:textStyle="bold"
                android:contentDescription="@string/marcaEmConta"/>

            <TextView
                android:id="@+id/precoEmConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:contentDescription="@string/precoEmConta"/>

            <TextView
                android:id="@+id/tamanhoEmConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:contentDescription="@string/tamanhoEmConta"
                />

            <TextView
                android:id="@+id/diferenca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:contentDescription="@string/diferencaLitro"
                />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/container"></include>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@drawable/original"
        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

